chat: fix colors for sticker context menus

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1491,7 +1491,7 @@
             /// Stickers -> Timestamp.
             > div.a81-s ._3qAvH { c: 0 0 left }
             /// Stickers -> Sender name bubble. #69
-            ._3tMyP {
+            /._3tMyP {
                 c: 0 0 left;
                 box-shadow: 0 1px 0.5px sh i;
             }
@@ -1511,7 +1511,7 @@
                 /// Non-stickers.
                 &:not(._2PpWQ) { background: linear-gradient(90deg, t, left 80%) i }
                 /// Stickers.
-                &._2PpWQ > div[style *= 'opacity'] { c: 0 0 left }
+                /._2PpWQ._2Nkc4 div[style *= 'opacity'] { c: 0 0 left }
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
@@ -1553,7 +1553,7 @@
                 /// Non-stickers.
                 &:not(._2PpWQ) { background: linear-gradient(90deg, t, right 80%) i }
                 /// Stickers.
-                &._2PpWQ div[style *= 'opacity'] { c: 0 0 right }
+                /._3EQsG._2PpWQ div[style *= 'opacity'] { c: 0 0 right }
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
