icons: animate selected message icons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1300,9 +1300,9 @@
                 /._1wRbe {
                     [data-icon = 'x'] { opacity: 0.55 i }
                     &:disabled path { opacity: 0.55 i }
-                    path { opacity: 1 i }
+                    path { opacity: 0.55 i }
                     
-                    //Animate-ish
+                    /// Animate-ish
                     &:hover > span > svg > path { 
                         opacity: 1 i;
                         fill-opacity: 0.9 i;
