modals: tweak inner padding of a few modals

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -632,6 +632,12 @@
                 c: 0 bd;
                 + div { c: fg }
             }
+            /// Inner padding tweak.
+            &._3RiLE {
+                padding: 0 i;
+                > .aymnx { padding: 22px 24px 20px i }
+                .AZ3xD { margin: 0 }
+            }
         }
         /// Settings -> Upload a new avatar.
         [data-animate-modal-body] {
