icons: fix disabled icons in selected msg area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1302,9 +1302,9 @@
                 }
                 /// Reset icon opacity.
                 /._1wRbe {
-                    [data-icon = 'x'] { opacity: 0.55 i }
-                    &:disabled path { opacity: 0.55 i }
                     path { opacity: 0.55 i }
+                    /// Disabled icons.
+                    &:disabled path { fill: cm i; opacity: 0.25 i }
                     /// Animate-ish.
                     &:hover > span > svg > path {
                         opacity: 1 i;
