--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1185,7 +1185,7 @@
             /._3jHKU { z-index: 9 i }
         }
         /// Media/Links/Docs -> Selected header.
-        .yrOIH {
+        ._2XHj8 {
             c: 0 0 hl;
             box-shadow: inset 0 -1px bd;
             span { c: fg }
@@ -1304,7 +1304,7 @@
                     div { c: 0 white }
                 }
                 /// Reset icon opacity.
-                /._1wRbe {
+                /._3f5U8 {
                     path { opacity: 0.55 i }
                     /// Disabled icons.
                     &:disabled path { fill: cm i; opacity: 0.25 i }
