modals: fix styles when adding group participants

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -573,6 +573,17 @@
                 }
             }
         }
+        /// Add group participants.
+        .I72vi {
+            c: 0 0 hl;
+            overflow: hidden;
+            box-shadow: 0 1px bd;
+            > div:not(#z) {
+                c: 0 0 t;
+                border: none i;
+                > div { c: 0 0 bd }
+            }
+        }
         /// Footer.
         ._21bWq { c: 0 0 hl }
         /// Previous/next buttons.
@@ -603,7 +614,7 @@
             }
         }
         /// Popup message.
-        [data-animate-modal-popup]:not(#z) {
+        [data-animate-modal-popup]:not(._2ILbv) {
             border: 1px solid bd;
             rad: r;
             c: 0 0 bg;
