intro: bottom divider color fix

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -31,7 +31,7 @@
 @var select chat_left 'Left message bubble position' {
     'Left side  *': 'start ',
     'Right side  ': 'end   ',
-}
+}\
 @var checkbox chat_b_l 'Custom background for left message bubble' 0
 @var color b_l_bg 'Left message bubble color' #383d46
 @var select chat_right 'Right message bubble position' {
@@ -356,7 +356,8 @@
         }
 
         /// Intro alert for desktop applications.
-        .aheht { margin-top: 16px i }
+        .IMBOA { margin-top: 16px i }
+        ._2a2hS { c: 0 0 bd }
 
         /// Left -> Typing indicator.
         span[title *= 'typing...'], ._2ZAIy { c: ac }
