global: fix emoji search input color in Chromium

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -530,6 +530,7 @@
                     c: fg 0 hl;
                     box-shadow: inner;
                 }
+                input { c: fg }
             }
             /// Sections.
             ._2lKjK { c: cm }
