intro: message variable content

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -154,7 +154,7 @@
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
         --version   : 'Dark-WhatsApp v2.0.6';
-        --message   : 'The v2 is finally here! 🎉 🥳 Read more: ';
+        --message   : 'Version 2 is finally here! 🎉🥳 Read more: ';
         --changes   : 'https://vednoc.me/blog/the-new-dark-whatsapp';
     }
 
