--- a/wa.user.styl
+++ b/wa.user.styl
@@ -68,23 +68,23 @@
     'Custom colors    ': 'custom',
 }
 
-@var color dark    'Color: Primary background   ' #1f232a
-@var color darken  'Color: Highlight background ' #252A33
-@var color darker  'Color: Secondary background ' #2c313a
-@var color light   'Color: Primary foreground   ' #e9e9e9
-@var color lighter 'Color: Secondary foreground ' #a1a1a1
-@var color accent  'Color: Accent               ' #7289da
-@var color yellow  'Color: Yellow               ' #f0c674
-@var color orange  'Color: Orange               ' #d98245
-@var color red     'Color: Red                  ' #a54242
-@var color magenta 'Color: Magenta              ' #b294bb
-@var color violet  'Color: Violet               ' #85678f
-@var color blue    'Color: Blue                 ' #54738c
-@var color cyan    'Color: Cyan                 ' #5e8d87
-@var color green   'Color: Green                ' #7b823a
-@var color white   'Color: White                ' #ffffff
-@var color sh      'Color: Shadow light         ' #00000025
-@var color sh-h    'Color: Shadow heavy         ' #00000035
+@var color dark     'Color: Primary background    ' #1f232a
+@var color darken   'Color: Highlight background  ' #252A33
+@var color darker   'Color: Secondary background  ' #2c313a
+@var color light    'Color: Primary foreground    ' #e9e9e9
+@var color lighter  'Color: Secondary foreground  ' #a1a1a1
+@var color accent   'Color: Accent                ' #7289da
+@var color yellow   'Color: Yellow                ' #f0c674
+@var color orange   'Color: Orange                ' #d98245
+@var color red      'Color: Red                   ' #a54242
+@\var color magenta 'Color: Magenta               ' #b294bb
+@\var color violet  'Color: Violet                ' #85678f
+@var color blue     'Color: Blue                  ' #54738c
+@\var color cyan    'Color: Cyan                  ' #5e8d87
+@var color green    'Color: Green                 ' #7b823a
+@var color white    'Color: White                 ' #ffffff
+@var color sh       'Color: Shadow light          ' #00000025
+@var color sh-h     'Color: Shadow heavy          ' #00000035
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
@@ -119,20 +119,20 @@
             --lighter   : lighter;
             --accent    : accent;
         }
-        --yellow    : yellow;
-        --orange    : orange;
-        --red       : red;
-        --magenta   : magenta;
-        --violet    : violet;
-        --blue      : blue;
-        --cyan      : cyan;
-        --green     : green;
-        --white     : white;
-        --radius    : radius-g;
-        --t         : transparent;
-        --shadow    : sh;
-        --sh-h      : sh-h;
-        --bshadow   : 0 2px 4px var(--shadow);
+        --yellow      : yellow;
+        --orange      : orange;
+        --red         : red;
+        //--magenta   : magenta;
+        //--violet    : violet;
+        --blue        : blue;
+        //--cyan      : cyan;
+        --green       : green;
+        --white       : white;
+        --radius      : radius-g;
+        --t           : transparent;
+        --shadow      : sh;
+        --sh-h        : sh-h;
+        --bshadow     : 0 2px 4px var(--shadow);
 
         --app-width : app_width;
 
@@ -159,28 +159,28 @@
     }
 
     // Use stylus-lang variables with CSS variables.
-    bg      = var(--dark);
-    hl      = var(--darken);
-    bd      = var(--darker);
-    fg      = var(--light);
-    cm      = var(--lighter);
-    ac      = var(--accent);
-    sh      = var(--shadow);
-    sh-h    = var(--sh-h);
-    bsh     = var(--bshadow);
-    yellow  = var(--yellow);
-    orange  = var(--orange);
-    red     = var(--red);
-    magenta = var(--magenta);
-    violet  = var(--violet);
-    blue    = var(--blue);
-    cyan    = var(--cyan);
-    green   = var(--green);
-    white   = var(--white);
-    t       = var(--t);
-    r       = var(--radius);
-    outer   = 0 0 0 1px bd;
-    inner   = inset outer;
+    bg        = var(--dark);
+    hl        = var(--darken);
+    bd        = var(--darker);
+    fg        = var(--light);
+    cm        = var(--lighter);
+    ac        = var(--accent);
+    sh        = var(--shadow);
+    sh-h      = var(--sh-h);
+    bsh       = var(--bshadow);
+    yellow    = var(--yellow);
+    orange    = var(--orange);
+    red       = var(--red);
+    //magenta = var(--magenta);
+    //violet  = var(--violet);
+    blue      = var(--blue);
+    //cyan    = var(--cyan);
+    green     = var(--green);
+    white     = var(--white);
+    t         = var(--t);
+    r         = var(--radius);
+    outer     = 0 0 0 1px bd;
+    inner     = inset outer;
 
     // Color mixin.
     // All colors: `c: fg bd bg;`
