chat: update footer color in select messages mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1735,7 +1735,7 @@
         + span:not([class]) > div {
             border-left: 1px solid bd;
             border-top: 1px solid bd;
-            c: 0 0 bg;
+            c: 0 0 hl;
         }
         /// Alerts -> Not in your contacts.
         ._2Pown {
