status: fix colors for status icon states
Closes #91.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -734,8 +734,6 @@
                 /// Text.
                 .OEFaY { c: cm }
                 ._26-u- { c: fg }
-                /// Circle.
-                circle[r = '50'] { stroke: ac i }
             }
             > div[class]:nth-child(2) {
                 .ojaNO { c: cm }
@@ -753,6 +751,11 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+        /// Status icon state.
+        /circle {
+            v: 0 cm;
+            &._3yudO { v: 0 ac }
         }
     }
 
