groups: reset group participants btn fill-opacity

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1102,7 +1102,10 @@
                 /._3p0T6 {
                     c: 0 0 ac;
                     /// Expand group participants list button.
-                    &.w4k6i { c: 0 0 t }
+                    &.w4k6i {
+                        c: 0 0 t;
+                        path { fill-opacity: 0.55 i }
+                    }
                 }
                 /// Remove borders.
                 ._2DxRd, ._2WP9Q { border: none }
