--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1104,7 +1104,7 @@
                     /// Expand group participants list button.
                     &.w4k6i {
                         c: 0 0 t;
-                        path { fill-opacity: 0.55 i }
+                        path { fill-opacity: 0.55 }
                     }
                 }
                 /// Remove borders.
