global: selected media buttons opacity reset

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -382,6 +382,7 @@
 
         /// Global -> Active buttons.
         ._3j8Pd {
+            fill-opacity: 0.55;
             &.GPmgF, &.GPmgf {
                 c: 0 0 bd;
                 [data-icon] path { fill-opacity: 1 i }
