--- a/wa.user.styl
+++ b/wa.user.styl
@@ -683,6 +683,10 @@
             ._1VI-m { c: fg }
             [role = 'button'] { c: 0 0 ac }
         }
+        /// Contact/group -> Profile image
+        ._8icek {
+            fill-opacity: 0.55
+        }
         /// View group invite.
         ._2Vo52 {
             /// Header.
