--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1570,7 +1570,10 @@
                 &._15CAo._3WZEQ { background: none i }
             }
             /// Replies.
-            ._2HTIU { c: 0 0 bg }
+            ._2HTIU {
+                c: 0 0 bg;
+                &:hover { opacity: 0.8 }
+            }
             /// Feat -> Align left bubble.
             if ( chat_left == 'end' ) { align-items: flex-end }
         }
@@ -1612,7 +1615,10 @@
                 &._15CAo._3WZEQ { background: none i }
             }
             /// Replies.
-            ._2HTIU { c: 0 0 bg }
+            ._2HTIU {
+                c: 0 0 bg;
+                &:hover { opacity: 0.8 }
+            }
             /// Feat -> Align right bubble.
             if ( chat_right == 'start' ) { align-items: flex-start }
         }
