--- a/wa.user.styl
+++ b/wa.user.styl
@@ -83,14 +83,14 @@
 @var color light   'Color: Primary foreground   ' #e9e9e9
 @var color lighter 'Color: Secondary foreground ' #a1a1a1
 @var color accent  'Color: Accent               ' #7289da
-@var color yellow  'Color: Yellow               ' #f0c674
-@var color orange  'Color: Orange               ' #d98245
-@var color red     'Color: Red                  ' #a54242
-@var color magenta 'Color: Magenta              ' #b294bb
-@var color violet  'Color: Violet               ' #85678f
-@var color blue    'Color: Blue                 ' #54738c
-@var color cyan    'Color: Cyan                 ' #5e8d87
-@var color green   'Color: Green                ' #7b823a
+@var color yellow  'Color: Yellow               ' #e5c512
+@var color orange  'Color: Orange               ' #df4b16
+@var color red     'Color: Red                  ' #dc322f
+@var color magenta 'Color: Magenta              ' #f33682
+@var color violet  'Color: Violet               ' #6c71c4
+@var color blue    'Color: Blue                 ' #268bd2
+@var color cyan    'Color: Cyan                 ' #2aa198
+@var color green   'Color: Green                ' #859900
 @var color white   'Color: White                ' #ffffff
 @var color sh      'Color: Shadow light         ' #00000025
 @var color sh-h    'Color: Shadow heavy         ' #00000035
