chat: remove emoji race color hover background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -908,6 +908,7 @@
             }
             /// Emojis -> Race selection.
             > ul._3z3lc {
+                li._1sHYl { c: 0 0 t }
                 > li:first-child { c: 0 bd }
                 + [data-animate-dropdown-nib] {
                     border-bottom: 1px solid bd;
