global: fix search placeholder text color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -978,6 +978,8 @@
             }
             /// Remove wrapper background.
             /._2HS9r { c: 0 0 t }
+            /// Placeholder text color.
+            ._183ES, ._201Bk { c: cm }
         }
         /// Contacts.
         #pane-side {
