chat: select msgs mode pseudo-background z-index
Changing the Pseudo-background to appear underneath the message itself.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1356,6 +1356,7 @@
                     /// States.
                     &:hover, &._3Z2tD {
                         c: 0 0 t;
+                        z-index: 0;
                         &::before { c: 0 0 hl }
                     }
                     /// Right -> Fix bg for checkbox button.
